--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,15 +26,33 @@ suites:
     attributes:
       rackspace_nginx_php:
         php_version: '5.4'
+  - name: php54_override
+    run_list:
+      - recipe[rackspace_nginx_php_test::override]
+    attributes:
+      rackspace_nginx_php:
+        php_version: '5.4'  
   - name: php55
     run_list:
       - recipe[rackspace_nginx_php_test::default]
     attributes:
       rackspace_nginx_php:
         php_version: '5.5'
+  - name: php55_override
+    run_list:
+      - recipe[rackspace_nginx_php_test::override]
+    attributes:
+      rackspace_nginx_php:
+        php_version: '5.5'
   - name: php56
     run_list:
       - recipe[rackspace_nginx_php_test::default]
+    attributes:
+      rackspace_nginx_php:
+        php_version: '5.6'
+  - name: php56_override
+    run_list:
+      - recipe[rackspace_nginx_php_test::override]
     attributes:
       rackspace_nginx_php:
         php_version: '5.6'
