--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,7 +31,7 @@ CyclomaticComplexity:
   Max: 10
 
 # Disable Single Space before first arg
-SingleSpaceBeforeFirstArg:
+SpaceBeforeFirstArg:
   Enabled: false
 
 # Don't force a word array unless 5 elements
@@ -50,4 +50,3 @@ AllCops:
   Include:
     - '**/metadata.rb'
     - '**/*.rb'
-
